--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand fw-bold" href="#">SignLingo</a>
             <div class="navbar-nav mx-auto">
                 <a class="nav-link active" href="#">Dashboard</a>
-                <a class="nav-link" href="#">Courses</a>
+                <a class="nav-link" href="#" onclick="window.location.href='/course'">Courses</a>
             </div>
             <div class="d-flex align-items-center gap-3">
                 <button class="action-button">
